{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 105,
  "lineage": "b2dd163b-eacd-68ae-06f2-d60ab23bcaa6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0de7a80a0b8f2f196",
            "arn": "arn:aws:ec2:ap-southeast-1:992382362896:elastic-ip/eipalloc-0de7a80a0b8f2f196",
            "domain": "vpc",
            "id": "eipalloc-0de7a80a0b8f2f196",
            "network_border_group": "ap-southeast-1",
            "private_dns": "ip-10-0-2-120.ap-southeast-1.compute.internal",
            "public_dns": "ec2-13-213-135-180.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.213.135.180",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Managed-By": "terraform"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06c2e40d46ca76b13",
            "arn": "arn:aws:ec2:ap-southeast-1:992382362896:elastic-ip/eipalloc-06c2e40d46ca76b13",
            "domain": "vpc",
            "id": "eipalloc-06c2e40d46ca76b13",
            "network_border_group": "ap-southeast-1",
            "private_dns": "ip-10-0-1-208.ap-southeast-1.compute.internal",
            "public_dns": "ec2-54-251-58-179.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.251.58.179",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Managed-By": "terraform"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01811d4912b4ccb26",
            "arn": "arn:aws:ec2:ap-southeast-1:992382362896:instance/i-031091317433676ae",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-031091317433676ae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "hmk.pub",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cb6313f1254e8af4",
            "private_dns": "ip-10-0-1-29.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.29",
            "public_ip": "13.213.43.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "Managed-By": "terraform"
                },
                "throughput": 125,
                "volume_id": "vol-04f95b3e96ca91cf9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02dc0e59fe7388306",
            "tags": {
              "Name": "VPC-A-Server-1"
            },
            "tags_all": {
              "Managed-By": "terraform",
              "Name": "VPC-A-Server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e8bc6fa1c333b22a"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2_key_pair",
            "aws_security_group.server_sg",
            "aws_subnet.base_subnets",
            "aws_vpc.base_vpc",
            "tls_private_key.ssh_keypair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "base_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:992382362896:internet-gateway/igw-075e794e71ed31248",
            "id": "igw-075e794e71ed31248",
            "owner_id": "992382362896",
            "tags": {
              "Name": "VPC-A-IGW"
            },
            "tags_all": {
              "Managed-By": "terraform",
              "Name": "VPC-A-IGW"
            },
            "vpc_id": "vpc-01fb9792635e2eb53"
          },
          "dependencies": [
            "aws_vpc.base_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_GT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0de7a80a0b8f2f196",
            "association_id": "eipassoc-07274638e9a21a62f",
            "connectivity_type": "public",
            "id": "nat-0801209360f2beceb",
            "network_interface_id": "eni-03fbc563f60d84bb4",
            "private_ip": "10.0.2.137",
            "public_ip": "13.213.135.180",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f44f584fc0d8f1d0",
            "tags": {
              "Name": "my NAT GW"
            },
            "tags_all": {
              "Managed-By": "terraform",
              "Name": "my NAT GW"
            }
          },
          "dependencies": [
            "aws_eip.NAT_eip",
            "aws_internet_gateway.base_igw",
            "aws_subnet.base_subnets",
            "aws_vpc.base_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "natGW_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01df95b64577acb111080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0801209360f2beceb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01df95b64577acb11",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NAT_eip",
            "aws_internet_gateway.base_igw",
            "aws_nat_gateway.NAT_GT",
            "aws_subnet.base_subnets",
            "aws_vpc.base_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "base_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:992382362896:route-table/rtb-08b1c06fe5c6af9ac",
            "id": "rtb-08b1c06fe5c6af9ac",
            "owner_id": "992382362896",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-075e794e71ed31248",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "My_public_RT"
            },
            "tags_all": {
              "Managed-By": "terraform",
              "Name": "My_public_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-01fb9792635e2eb53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.base_igw",
            "aws_vpc.base_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT_ASSO",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Public-Subnet-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8c6226a5df00938",
            "route_table_id": "rtb-08b1c06fe5c6af9ac",
            "subnet_id": "subnet-02dc0e59fe7388306"
          },
          "dependencies": [
            "aws_internet_gateway.base_igw",
            "aws_route_table.base_RT",
            "aws_subnet.base_subnets",
            "aws_vpc.base_vpc"
          ]
        },
        {
          "index_key": "Public-Subnet-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4a2a51a0bec963a",
            "route_table_id": "rtb-08b1c06fe5c6af9ac",
            "subnet_id": "subnet-0f44f584fc0d8f1d0"
          },
          "dependencies": [
            "aws_internet_gateway.base_igw",
            "aws_route_table.base_RT",
            "aws_subnet.base_subnets",
            "aws_vpc.base_vpc"
          ]
        },
        {
          "index_key": "Public-Subnet-3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012464c900bc8c7b2",
            "route_table_id": "rtb-08b1c06fe5c6af9ac",
            "subnet_id": "subnet-0d2428a5062549992"
          },
          "dependencies": [
            "aws_internet_gateway.base_igw",
            "aws_route_table.base_RT",
            "aws_subnet.base_subnets",
            "aws_vpc.base_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:992382362896:security-group/sg-0e8bc6fa1c333b22a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e8bc6fa1c333b22a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "server-sg",
            "name_prefix": "",
            "owner_id": "992382362896",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Server_SG"
            },
            "tags_all": {
              "Managed-By": "terraform",
              "Name": "Server_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-01fb9792635e2eb53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.base_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "base_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Public-Subnet-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:992382362896:subnet/subnet-02dc0e59fe7388306",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02dc0e59fe7388306",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382362896",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-A-My-Public-Subnet-1"
            },
            "tags_all": {
              "Managed-By": "terraform",
              "Name": "VPC-A-My-Public-Subnet-1"
            },
            "vpc_id": "vpc-01fb9792635e2eb53"
          },
          "dependencies": [
            "aws_vpc.base_vpc"
          ]
        },
        {
          "index_key": "Public-Subnet-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:992382362896:subnet/subnet-0f44f584fc0d8f1d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f44f584fc0d8f1d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382362896",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-A-My-Public-Subnet-2"
            },
            "tags_all": {
              "Managed-By": "terraform",
              "Name": "VPC-A-My-Public-Subnet-2"
            },
            "vpc_id": "vpc-01fb9792635e2eb53"
          },
          "dependencies": [
            "aws_vpc.base_vpc"
          ]
        },
        {
          "index_key": "Public-Subnet-3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:992382362896:subnet/subnet-0d2428a5062549992",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2428a5062549992",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382362896",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-A-My-Public-Subnet-3"
            },
            "tags_all": {
              "Managed-By": "terraform",
              "Name": "VPC-A-My-Public-Subnet-3"
            },
            "vpc_id": "vpc-01fb9792635e2eb53"
          },
          "dependencies": [
            "aws_vpc.base_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Private-Subnet-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:992382362896:subnet/subnet-0a0da922b16acab82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0da922b16acab82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382362896",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-A-My-Private-Subnet-1"
            },
            "tags_all": {
              "Managed-By": "terraform",
              "Name": "VPC-A-My-Private-Subnet-1"
            },
            "vpc_id": "vpc-01fb9792635e2eb53"
          },
          "dependencies": [
            "aws_vpc.base_vpc"
          ]
        },
        {
          "index_key": "Private-Subnet-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:992382362896:subnet/subnet-02a59e8044e410be6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a59e8044e410be6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382362896",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-A-My-Private-Subnet-2"
            },
            "tags_all": {
              "Managed-By": "terraform",
              "Name": "VPC-A-My-Private-Subnet-2"
            },
            "vpc_id": "vpc-01fb9792635e2eb53"
          },
          "dependencies": [
            "aws_vpc.base_vpc"
          ]
        },
        {
          "index_key": "Private-Subnet-3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:992382362896:subnet/subnet-02a051c93be7a5181",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a051c93be7a5181",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382362896",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-A-My-Private-Subnet-3"
            },
            "tags_all": {
              "Managed-By": "terraform",
              "Name": "VPC-A-My-Private-Subnet-3"
            },
            "vpc_id": "vpc-01fb9792635e2eb53"
          },
          "dependencies": [
            "aws_vpc.base_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "base_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:992382362896:vpc/vpc-01fb9792635e2eb53",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-051899748de1e8e37",
            "default_route_table_id": "rtb-01df95b64577acb11",
            "default_security_group_id": "sg-0b6ea0524b15b0b0b",
            "dhcp_options_id": "dopt-0706bb4e3898a9f7b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01fb9792635e2eb53",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01df95b64577acb11",
            "owner_id": "992382362896",
            "tags": {
              "Name": "VPC-A"
            },
            "tags_all": {
              "Managed-By": "terraform",
              "Name": "VPC-A"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress_all_allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:992382362896:security-group-rule/sgr-0ca4ddec551ff7fec",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0ca4ddec551ff7fec",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e8bc6fa1c333b22a",
            "security_group_rule_id": "sgr-0ca4ddec551ff7fec",
            "tags": null,
            "tags_all": {
              "Managed-By": "terraform"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.server_sg",
            "aws_vpc.base_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ingress_ssh_allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:992382362896:security-group-rule/sgr-0a0652785846dd550",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0a0652785846dd550",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e8bc6fa1c333b22a",
            "security_group_rule_id": "sgr-0a0652785846dd550",
            "tags": null,
            "tags_all": {
              "Managed-By": "terraform"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.server_sg",
            "aws_vpc.base_vpc"
          ]
        }
      ]
    }
  ]
}